--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,4 @@
-<!DOCTYPE html>
 <html lang="en">
-<<<<<<< HEAD
-<head>
-    <link rel="stylesheet" href="/src/styles/main.scss">
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
-=======
   <head>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
@@ -48,7 +35,7 @@
           <nav class="links-nav-big-screen">
            <a href="index.html">hꚢme</a>
            <a href="./about.html">abꚢut</a>
-           <a href="#">Recipes</a>
+           <a href="./recipe.html">Recipes</a>
           </nav>
         </div>
       </nav>
@@ -227,5 +214,4 @@
       </nav>
     </footer>
   </body>
->>>>>>> main
 </html>
