--- a/src/index.html
+++ b/src/index.html
@@ -1,3 +1,5 @@
+
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <link
@@ -35,7 +37,7 @@
           <nav class="links-nav-big-screen">
            <a href="index.html">hꚢme</a>
            <a href="./about.html">abꚢut</a>
-           <a href="#">Recipes</a>
+           <a href="./">Recipes</a>
           </nav>
         </div>
       </nav>
