--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,354 @@
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles/main.scss" />
-    <title>Hello, World!</title>
+    <title>About</title>
+    <link rel="stylesheet" href="./styles/main.scss" />
+    <script
+      src="https://kit.fontawesome.com/2492fc568a.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
-    <h1>Hello, World!</h1>
+    <header>
+      <nav>
+        <h1>Taste of Africa</h1>
+        <div>
+          <ul>
+            <li><a href="#"> HOME</a></li>
+            <li><a href="#">ABOUT</a></li>
+            <li><a href="#">RECIPES</a></li>
+            <li><a href="#">TEAM</a></li>
+          </ul>
+          <form action="">
+            <input type="text" placeholder="Search" />
+            <button type="submit">
+              <i class="fa-solid fa-magnifying-glass"></i>
+            </button>
+          </form>
+        </div>
+      </nav>
+    </header>
+    <main>
+      <div
+        class="container-fluid d-flex flex-lg-row gap-5 justify-content-center"
+      >
+        <div class="card m-4" style="width: 300px">
+          <img
+            src="./images/Backgrounds/tunisia.jpg"
+            height="200px"
+            width="300px"
+            class="card-img-top"
+            alt="tunesia"
+          />
+          <div class="card-body">
+            <h5 class="card-title">
+              by Yassine
+              <img
+                src="./images/Backgrounds/yassine.jpg"
+                height="60px"
+                alt="yassine"
+              />
+            </h5>
+            <p class="card-text">
+              A trip to Tunisia wouldn't be complete without a taste of the
+              savory fusion of food and flavor it does so well. You can't make
+              couscous for one. It's for five or six or 10! You can't prepare
+              for one. It doesn't work.”
+            </p>
+            <a href="#" class="btn btn-primary">Follow the recipes</a>
+          </div>
+        </div>
+
+        <div class="card m-4" style="width: 300px">
+          <img
+            src="./images/Backgrounds/cameroon.jpg"
+            height="200px"
+            width="300px"
+            class="card-img-top"
+            alt="cameroon"
+          />
+          <div class="card-body">
+            <h5 class="card-title">
+              by Rodrigue
+              <img
+                src="./images/Backgrounds/rodrigue.jpg."
+                height="60px"
+                alt="rodrigue"
+              />
+            </h5>
+            <p class="card-text">
+              Cameroonian cuisine (French: cuisine camerounaise) is one of the
+              most varied in Africa due to Cameroon's location on the crossroads
+              between the north, west, and center of the continent; the
+              diversity in ethnicity with mixture ranging from Bantus,
+              Semi-bantus and Shuwa Arabs, as well as the influence of German,
+              French and English colonialization.
+            </p>
+            <a href="#" class="btn btn-primary">Follow the recipes</a>
+          </div>
+        </div>
+        <div class="card m-4" style="width: 300px">
+          <img
+            src="./images/Backgrounds/kenya.jpg"
+            height="200px"
+            width="300px"
+            class="card-img-top"
+            alt="kenya"
+          />
+          <div class="card-body">
+            <h5 class="card-title">
+              By Moses
+              <img
+                src="./images/Backgrounds/moses.jpg."
+                height="60px"
+                alt="moses"
+              />
+            </h5>
+            <p class="card-text">
+              Known as “the cradle of mankind,” Kenya has no single culture that
+              identifies it. There are about 40 different ethnic groups in
+              Kenya, each with its unique culture. As a result, there is no
+              single dish that represents all of Kenya. The staple foods in
+              Kenya include cereals (maize, millet, sorghum and others depending
+              on the region) eaten with various meats and vegetables. Foods that
+              are universally eaten in Kenya are ugali, sukuma wiki and githeri.
+            </p>
+            <a href="#" class="btn btn-primary">Follow the recipes</a>
+          </div>
+        </div>
+      </div>
+
+      <section>
+        <div class="container-fluid">
+          <div class="container">
+            <h1>North African food</h1>
+            <p>
+              Cuisine of the Maghreb countries, Algerian cuisine, Moroccan
+              cuisine and Tunisian cuisine. North Africa borders the
+              Mediterranean Sea and includes Algeria, Morocco, Libya, Tunisia,
+              Mauritania and Egypt. This region is marked by its geographical,
+              political, social, economic and cultural diversity. The cuisine,
+              culinary style and art of North Africa are as diverse as its
+              regions, peoples and history. The roots of North African cuisine
+              can be traced back to the ancient empires of North Africa,
+              particularly Egypt, where many of the country's dishes and
+              culinary traditions date back to antiquity. From the seventh
+              century, the Arabs introduced a variety of spices, such as
+              saffron, nutmeg, cinnamon, ginger and cloves, which contributed to
+              and influenced the culinary culture of North Africa. The Ottoman
+              Turks brought pastries and other baked goods.
+            </p>
+          </div>
+          <div class="container">
+            <h1>Central African food</h1>
+            <p>
+              Central Africa stretches from the Tibesti massif in northern Chad
+              to the great rainforest at the source of the Congo Basin, the Kivu
+              highlands and the Katanga savannahs. This region has received
+              several culinary influences. The Swahili (a culture that evolved
+              In the western region, especially in the Kongo Kingdom, there was
+              a Portuguese culinary influence. An example of this is the salted
+              fish called makayabu from the Portuguese word Bacalhau
+              (bal-ca-ya-hu). These foods have had a great influence on local
+              cuisine and preparation methods. Nevertheless, the culinary
+              influence found in Central Africa is also transcontinental.
+              Central Africa shares several dishes with other African regions
+              because of their proximity. Ntaba (goat) or lamb) in barbecue
+              style with chikwangue and chilli dust The basic ingredients are
+              plantains, cassava, chikwangue and rice. Fufu, a starch-based
+              dish, is most often made from fermented cassava roots, but also
+              includes plantains, maize and yam. Fufu is served as a buffet with
+              meat and/or fish, sauces, vegetables and chilli.
+            </p>
+          </div>
+
+          <div class="container">
+            <h1>Kenyan food</h1>
+            <p>
+              Kenyan cuisine is very varied and differs from one region (natural
+              resources) and especially from one ethnic group (traditions) to
+              another. There are however two common culinary preparations: Ugali
+              (a word of Swahili origin). It can be made only with white maize
+              (mahindi in Swahili) or with sorghum (mtama in Swahili). Githeri
+              (a word of Kikuyu origin), which is a mixture of maize grains and
+              beans. This mixture may or may not be accompanied by other
+              vegetables, depending on the tribal origin. Nshima, a maize-based
+              dish mixed with vegetables and meat (or fish), is also sometimes
+              eaten. The side dishes may consist of ugali (also called kwon in
+              Luo) made of yellow or white maize with either sukuma wiki (which
+              currently means "a dish of cabbage" but is a misnomer; in Swahili,
+              sukuma means to grow and wiki means week. Originally, therefore,
+              it meant "the art of preparing leftovers") or of scalded and
+              browned alot bo or kunde leaves (in Luo or Swahili). Chapati (in
+              Swahili) with dengu (in Swahili) or other oganda or maharagwe
+              ('beans' in Luo or Swahili). Kachumbari ("tomato, onion and
+              coriander salad with varying degrees of spice" in Swahili).
+              Plantain or sweet potato. Okra (cooked in a tomato sauce or mixed
+              with sukuma wiki or alot bo). Apoth ("slippery vegetable" in Luo),
+              which is the leaf of a wild herb that tastes like okra. Everything
+              can be washed down with a local beer (Tusker or Senator) or palm
+              wine.
+            </p>
+          </div>
+        </div>
+      </section>
+
+      <section>
+        <div class="container2">
+          <div>
+            <h1>TEAM</h1>
+            <div class="card mb-3" style="max-width: 540px">
+              <div class="row g-0">
+                <div class="col-md-4">
+                  <img
+                    src="./images/Backgrounds/yassine.jpg"
+                    class="img-fluid rounded-start"
+                    alt="yassine"
+                  />
+                </div>
+                <div class="col-md-8">
+                  <div class="card-body">
+                    <h5 class="card-title">Yassine</h5>
+                    <p class="card-text">
+                      <q><b>The smart guy</b> </q>, african food is divided into
+                      parts, and i'm from the Maghreb north africa. I would like
+                      to take you around the tunesian food
+                      <a href="#"> Recipes</a> . We have a large variety of meat
+                      and vegetables...
+                    </p>
+                    <p class="card-text">
+                      <small class="text-muted">Read more...</small>
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="card mb-3" style="max-width: 540px">
+              <div class="row g-0">
+                <div class="col-md-4">
+                  <img
+                    src="./images/Backgrounds/rodrigue.jpg."
+                    class="img-fluid rounded-start"
+                    alt="rodrigue"
+                  />
+                </div>
+                <div class="col-md-8">
+                  <div class="card-body">
+                    <h5 class="card-title">Rodrigue</h5>
+                    <p class="card-text">
+                      <q><b>The talkative guy</b> </q> i would like to tell you
+                      more about cameroonian food ,but it's better to take a
+                      look on the <a href="#"> Recipes</a> and try to cook by
+                      yourself, i can also help you if you need...
+                    </p>
+                    <p class="card-text">
+                      <small class="text-muted">Read more...</small>
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="card mb-3" style="max-width: 540px">
+              <div class="row g-0">
+                <div class="col-md-4">
+                  <img
+                    src="./images/Backgrounds/moses.jpg."
+                    class="img-fluid rounded-start"
+                    alt="moses"
+                  />
+                </div>
+                <div class="col-md-8">
+                  <div class="card-body">
+                    <h5 class="card-title">Moses</h5>
+                    <p class="card-text">
+                      <q><b>The Wise guy</b> </q> , i can cook and i appreciate
+                      foods from all over the world. But if i had a choice, i'll
+                      invite you all t Kenya in my compound and you'll taste all
+                      the delicious varieties of Kenya...Follow me
+                      <a href="#"> here </a>
+                    </p>
+                    <p class="card-text">
+                      <small class="text-muted">Read more...</small>
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- <div class="container-img">
+            <img src="./images/Cameroon/ikwok.jpg" alt="cameroon" />
+            <img src="./images/tunisia/harrisa.jpg" alt="tunesia" />
+            <img src="./images/kenya/Kenya-food.jpg" alt="kenya" />
+          </div>
+        </div> -->
+      </section>
+    </main>
+
+    <div class="card m-4">
+      <div class="blockquote mb-0">
+        <h2>Subscribe to our webpage</h2>
+        <form>
+          <label for="name">Enter your Name</label>
+          <input type="text" id="name" placeholder="Enter your name" required />
+          <br />
+          <br />
+          <label for="email">Enter your Email</label>
+          <input
+            type="email"
+            id="email"
+            placeholder="Enter your Email"
+            required
+          />
+          <br />
+          <br />
+          <label for="name">Enter your Name</label>
+          <input type="text" id="name" placeholder="Enter your name" required />
+          <br />
+          <br />
+          <label for="password">Enter your Name</label>
+          <input type="password" name="password" id="password" />
+          <br />
+          <br />
+          <label for="message">Type your message here...</label>
+          <textarea name="" id="message" cols="30" rows="10"></textarea>
+        </form>
+      </div>
+      <p>You'll find more useful links about our countries here below.</p>
+      <ul>
+        <li>
+          <a href="#"> <Tunesia class="org">Tunesia</Tunesia></a>
+        </li>
+        <li>
+          <a href="#"><cameroon class="org">Cameroon</cameroon></a>
+        </li>
+        <li>
+          <a href="#"><kenya class="org">Kenya</kenya></a>
+        </li>
+      </ul>
+
+      <footer>
+        <div class="icons">
+          <a href="#"><i class="fa-brands fa-square-instagram"></i></a>
+          <a href="#"><i class="fa-brands fa-pinterest"></i></a>
+          <a href="#"><i class="fa-brands fa-facebook"></i></a>
+          <a href="#"> <i class="fa-brands fa-twitter"></i></a>
+        </div>
+        <div class="footer-div">
+          <h2 class="footer-title">Taste of Africa</h2>
+          <p>&copy; 2023 Taste of Africa. All Rights Reserved</p>
+        </div>
+      </footer>
+
+      <!--      <footer class="blockquote-footer">
+          copyright2023
+          <cite title="Source Title"> <q>you are what you eat</q> </cite>
+        </footer>
+      </blockquote> -->
+    </div>
   </body>
 </html>
