--- a/src/index.html
+++ b/src/index.html
@@ -289,7 +289,7 @@
       </section>
     </main>
 
-    <div class="card m-4">
+   <!--  <div class="card m-4">
       <div class="blockquote mb-0">
         <h2>Subscribe to our webpage</h2>
         <form>
@@ -316,7 +316,7 @@
           <br />
           <label for="message">Type your message here...</label>
           <textarea name="" id="message" cols="30" rows="10"></textarea>
-        </form>
+        </form> -->
       </div>
       <p>You'll find more useful links about our countries here below.</p>
       <ul>
